--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
+    
+  
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^7.2.4"
   }
 }
